RESOLVED FIXED94536
webkit-image-set() function not showing up when computing background property
https://bugs.webkit.org/show_bug.cgi?id=94536
Summary webkit-image-set() function not showing up when computing background property
Anish
Reported 2012-08-20 15:27:05 PDT
When setting background as a -webkit-image-set( parameters ), the background field in CSSStyleDeclaration shows only the parameters and not the whole "-webkit-image-set( parameters)"
Attachments
fix for bug 94536 (7.74 KB, patch)
2012-08-23 17:32 PDT, Anish
simon.fraser: review+
Added changed from Simon. ready to commit (7.24 KB, patch)
2012-08-24 11:02 PDT, Anish
no flags
Anish
Comment 1 2012-08-23 17:32:43 PDT
Created attachment 160292 [details] fix for bug 94536 added methods and tests
Simon Fraser (smfr)
Comment 2 2012-08-24 10:47:20 PDT
Comment on attachment 160292 [details] fix for bug 94536 View in context: https://bugs.webkit.org/attachment.cgi?id=160292&action=review > LayoutTests/fast/css/image-set-setting.html:1 > +<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN"> Just <!DOCTYPE html> > LayoutTests/fast/css/script-tests/image-set-setting.js:3 > +function testComputedStyle(property, rule) { Paren on new line please.
Anish
Comment 3 2012-08-24 11:02:21 PDT
Created attachment 160454 [details] Added changed from Simon. ready to commit
WebKit Review Bot
Comment 4 2012-08-24 12:16:49 PDT
Comment on attachment 160454 [details] Added changed from Simon. ready to commit Clearing flags on attachment: 160454 Committed r126611: <http://trac.webkit.org/changeset/126611>
WebKit Review Bot
Comment 5 2012-08-24 12:16:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.