webkit-image-set() function not showing up when computing background property https://bugs.webkit.org/show_bug.cgi?id=94536

Patch by Anish Bhayani <anish.bhayani@gmail.com> on 2012-08-24
Reviewed by Simon Fraser.

Source/WebCore:

Added isBaseValueList() to ensure ImageSetClass is not displaying shorthand notation.
Tests to make sure background shows '-webkit-image-set('.

Test: fast/css/image-set-setting.html

* css/CSSValue.h:
(CSSValue):
(WebCore::CSSValue::isBaseValueList):
* css/StylePropertySet.cpp:
(WebCore::StylePropertySet::getLayeredShorthandValue):

LayoutTests:

Used same tests from image-set-parsing to show consistency between CSS background
value and backgroundImage value when setting -webkit-image-set(...).

* fast/css/image-set-setting-expected.txt: Added.
* fast/css/image-set-setting.html: Added.
* fast/css/script-tests/image-set-setting.js: Added.
(testComputedStyle):
(testImageSetRule):

Canonical link: https://commits.webkit.org/112824@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126611 268f45cc-cd09-0410-ab3c-d52691b4dbfc